# Pymaker

./: Make.py  Makefile.py  README.rst  pymaker.py  pyproject.toml
docs/: api.rst  conf.py  index.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: quickstart.rst.txt
pymade/: docstrings.json
pymaker/: .pymaker.py.swp  __init__.py  pymaker.py  settings.py
