[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "py-maker"
author = "Pradhyum R"
author-email = "drpradhyum2016@outlook.com"
home-page = "https://pymaker.readthedocs.io/en/latest/"
classifiers = [ "License :: OSI Approved :: MIT License",]

[tool.flit.metadata.urls]
Documentation = "https://pymaker.readthedocs.io/en/latest/"
Source-Code = "https://github.com/techieji/Pymaker"

[tool.flit.scripts]
pymaker = "pymaker.pymaker:main"
